added codeception to composer.son

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
 	"require": {
 		"laravel/framework": "4.2.*"
 	},
+    "require-dev": {
+        "way/generators": "~3.0",
+        "codeception/codeception": "~2.0"
+    },
 	"autoload": {
 		"classmap": [
 			"app/commands",
@@ -32,8 +36,5 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "stable",
-	"require-dev": {
-		"way/generators": "~3.0"
-	}
+	"minimum-stability": "stable"
 }
