--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,11 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-        "laracasts/commander": "~1.0"
+        "laracasts/commander": "~1.0",
+		"laracasts/validation": "1.1.*"
 	},
     "require-dev": {
-        "way/generators": "~3.0",
+        "way/generators": "~2.0",
         "codeception/codeception": "~2.0",
         "laracasts/testdummy": "~1.0"
     },
@@ -20,7 +21,10 @@
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
-		]
+		],
+        "psr-4": {
+            "Larabook\\": "app/Larabook"
+        }
 	},
 	"scripts": {
 		"post-install-cmd": [
